<resources>
    <string name="app_name">McDonald\'s</string>
    <string name="slogan">I\'m lovin\' it</string>
    <string name="welcome_to">Welcome to</string>
    <string name="menu">Explore Our Menu →</string>
    <string name="location">See Our Locations →</string>
    <string name="back_to_home">← Back to Home</string>
    <string name="whats_new">What\'s New</string>
    <string name="meals_and_mcdeals">Meals and McDeals</string>
    <string name="burgers">Burgers</string>
    <string name="wings_and_mcnuggets">Wings and McNuggets</string>
    <string name="wraps_and_salads">Wraps &amp; Salads</string>
    <string name="fries_and_snacks">Fries and Snacks</string>
    <string name="happy_meal">Happy Meal</string>
    <string name="cold_drinks">Cold Drinks</string>
    <string name="mccafe">McCafé</string>
    <string name="desserts">Desserts</string>
    <string name="sauces">Sauces</string>
    <string name="back_to_menu">← Back to Menu</string>
    <string name="apple_caramel_pie">Apple Caramel Pie</string>
    <string name="menu_noel_chicken">Menu Noël Chicken</string>
    <string name="cheesy_beef">Cheesy Beef</string>
    <string name="cheesy_chicken">Cheesy Chicken</string>
    <string name="jolly_cheese">Jolly Cheese</string>
    <string name="menu_jolly_cheese">Menu Jolly Cheese</string>
    <string name="menu_xmas_beef">Menu XMAS Beef</string>
    <string name="noel_chicken">Noël Chicken</string>
    <string name="xmas_beef">XMAS Beef</string>
    <string name="sea_buckthorn_and_ginger_hot_drink">Sea Buckthorn and Ginger Hot Drink</string>
    <string name="raspberry_and_forest_berries_hot_drink">Raspberry and Forest Berries Hot Drink</string>
    <string name="triangles_swiss_cheese">Triangles Swiss Cheese</string>
    <string name="serving">Serving/Portion (g or ml)</string>
    <string name="energy">Energy</string>
    <string name="fat">Fat</string>
    <string name="saturated_fat">Saturated Fat</string>
    <string name="carbohidrates">Carbohidrates</string>
    <string name="sugar">Sugar</string>
    <string name="fibre">Fibre</string>
    <string name="proteins">Proteins</string>
    <string name="salt">Salt</string>
    <string name="price">Price</string>
    <string name="back_to_whats_new">← Back to What\'s New</string>
    <string name="apple_caramel_pie_description">A warm apple and caramel pie wrapped in a crispy crust.</string>
    <string name="apple_caramel_pie_serving">70 g</string>
    <string name="apple_caramel_pie_energy">180 kcal</string>
    <string name="apple_caramel_pie_fat">7,21 g</string>
    <string name="apple_caramel_pie_saturated_fat">3,64 g</string>
    <string name="apple_caramel_pie_carbohidrates">26,67 g</string>
    <string name="apple_caramel_pie_sugar">9,73 g</string>
    <string name="apple_caramel_pie_fibre">0,77 g</string>
    <string name="apple_caramel_pie_proteins">2,31 g</string>
    <string name="apple_caramel_pie_salt">0,42 g</string>
    <string name="apple_caramel_pie_price">40,00 MDL</string>
    <string name="menu_noel_chicken_description">Noël Chicken, Fries, Cold Drink.</string>
    <string name="menu_noel_chicken_serving" />
    <string name="menu_noel_chicken_energy" />
    <string name="menu_noel_chicken_fat" />
    <string name="menu_noel_chicken_saturated_fat" />
    <string name="menu_noel_chicken_carbohidrates" />
    <string name="menu_noel_chicken_sugar" />
    <string name="menu_noel_chicken_fibre" />
    <string name="menu_noel_chicken_proteins" />
    <string name="menu_noel_chicken_salt" />
    <string name="menu_noel_chicken_price">205,00 MDL</string>
    <string name="cheesy_beef_description">Beef burger with cheddar cheese, Big Tasty sauce, rehydrated onions, fresh white onions and Eisberg lettuce.</string>
    <string name="cheesy_beef_serving">115 g</string>
    <string name="cheesy_beef_energy">1136 kJ/271 kcal</string>
    <string name="cheesy_beef_fat">14,85 g</string>
    <string name="cheesy_beef_saturated_fat">5,61 g</string>
    <string name="cheesy_beef_carbohidrates">20,85 g</string>
    <string name="cheesy_beef_sugar">4,63 g</string>
    <string name="cheesy_beef_fibre">1,37 g</string>
    <string name="cheesy_beef_proteins">13,04 g</string>
    <string name="cheesy_beef_salt">1,19 g</string>
    <string name="cheesy_beef_price">50,00 MDL</string>
    <string name="cheesy_chicken_description">Chicken burger with cheddar cheese, Big Tasty sauce, fresh white onions and Eisberg lettuce.</string>
    <string name="cheesy_chicken_serving">125 g</string>
    <string name="cheesy_chicken_energy">1271 kJ/303 kcal</string>
    <string name="cheesy_chicken_fat">10,3 g</string>
    <string name="cheesy_chicken_saturated_fat">3 g</string>
    <string name="cheesy_chicken_carbohidrates">40,8 g</string>
    <string name="cheesy_chicken_sugar">6,2 g</string>
    <string name="cheesy_chicken_fibre">2,55 g</string>
    <string name="cheesy_chicken_proteins">10,44 g</string>
    <string name="cheesy_chicken_salt">1,42 g</string>
    <string name="cheesy_chicken_price">50,00 MDL</string>
    <string name="jolly_cheese_description">Burger with lettuce salad, breaded cheese, fried onions, creamy and delicious gravy, potato Rösti, all held together by two soft buns.</string>
    <string name="jolly_cheese_serving">270 g</string>
    <string name="jolly_cheese_energy">2916 kJ/698 kcal</string>
    <string name="jolly_cheese_fat">35,9 g</string>
    <string name="jolly_cheese_saturated_fat">9,19 g</string>
    <string name="jolly_cheese_carbohidrates">77,7 g</string>
    <string name="jolly_cheese_sugar">10,17 g</string>
    <string name="jolly_cheese_fibre">5,75 g</string>
    <string name="jolly_cheese_proteins">14,6 g</string>
    <string name="jolly_cheese_salt">3,06 g</string>
    <string name="jolly_cheese_price">110,00 MDL</string>
    <string name="menu_jolly_cheese_description">Jolly Cheese, Fries, Cold Drink.</string>
    <string name="menu_jolly_cheese_serving" />
    <string name="menu_jolly_cheese_energy" />
    <string name="menu_jolly_cheese_fat" />
    <string name="menu_jolly_cheese_saturated_fat" />
    <string name="menu_jolly_cheese_carbohidrates" />
    <string name="menu_jolly_cheese_sugar" />
    <string name="menu_jolly_cheese_fibre" />
    <string name="menu_jolly_cheese_proteins" />
    <string name="menu_jolly_cheese_salt" />
    <string name="menu_jolly_cheese_price">195,00 MDL</string>
    <string name="menu_xmas_beef_description">XMAS Beef, Fries, Cold Drink.</string>
    <string name="menu_xmas_beef_serving" />
    <string name="menu_xmas_beef_energy" />
    <string name="menu_xmas_beef_fat" />
    <string name="menu_xmas_beef_saturated_fat" />
    <string name="menu_xmas_beef_carbohidrates" />
    <string name="menu_xmas_beef_sugar" />
    <string name="menu_xmas_beef_fibre" />
    <string name="menu_xmas_beef_proteins" />
    <string name="menu_xmas_beef_salt" />
    <string name="menu_xmas_beef_price">200,00 MDL</string>
    <string name="noel_chicken_description">Burger with chicken, bacon, Potato Rösti, Emmental cheese, Big Rösti sauce, all in two soft buns.</string>
    <string name="noel_chicken_serving">290 g</string>
    <string name="noel_chicken_energy">3067 kJ/734 kcal</string>
    <string name="noel_chicken_fat">37,25 g</string>
    <string name="noel_chicken_saturated_fat">7,40 g</string>
    <string name="noel_chicken_carbohidrates">67 g</string>
    <string name="noel_chicken_sugar">8,01 g</string>
    <string name="noel_chicken_fibre">6 g</string>
    <string name="noel_chicken_proteins">30,57 g</string>
    <string name="noel_chicken_salt">3,71 g</string>
    <string name="noel_chicken_price">120,00 MDL</string>
    <string name="xmas_beef_description">Burger with beef, crunchy bacon, breaded cheese, lettuce, fried onions, creamy sauce, and buns that hold all the deliciousness together.</string>
    <string name="xmas_beef_serving">270 g</string>
    <string name="xmas_beef_energy">3217 kJ/771 kcal</string>
    <string name="xmas_beef_fat">43,42 g</string>
    <string name="xmas_beef_saturated_fat">15,9 g</string>
    <string name="xmas_beef_carbohidrates">60,8 g</string>
    <string name="xmas_beef_sugar">9,7 g</string>
    <string name="xmas_beef_fibre">6,75 g</string>
    <string name="xmas_beef_proteins">32,82 g</string>
    <string name="xmas_beef_salt">3,28 g</string>
    <string name="xmas_beef_price">115,00 MDL</string>
    <string name="sea_buckthorn_and_ginger_hot_drink_description" />
    <string name="sea_buckthorn_and_ginger_hot_drink_serving">400 ml</string>
    <string name="sea_buckthorn_and_ginger_hot_drink_energy">532,9 kJ/127,5 kcal</string>
    <string name="sea_buckthorn_and_ginger_hot_drink_fat">0,9 g</string>
    <string name="sea_buckthorn_and_ginger_hot_drink_saturated_fat" />
    <string name="sea_buckthorn_and_ginger_hot_drink_carbohidrates">28,8 g</string>
    <string name="sea_buckthorn_and_ginger_hot_drink_sugar">28,8 g</string>
    <string name="sea_buckthorn_and_ginger_hot_drink_fibre" />
    <string name="sea_buckthorn_and_ginger_hot_drink_proteins">0,2 g</string>
    <string name="sea_buckthorn_and_ginger_hot_drink_salt">0,1 g</string>
    <string name="sea_buckthorn_and_ginger_hot_drink_price">55,00 MDL</string>
    <string name="raspberry_and_forest_berries_hot_drink_description" />
    <string name="raspberry_and_forest_berries_hot_drink_serving">400 ml</string>
    <string name="raspberry_and_forest_berries_hot_drink_energy">682,2 kJ/163,2 kcal</string>
    <string name="raspberry_and_forest_berries_hot_drink_fat">0 g</string>
    <string name="raspberry_and_forest_berries_hot_drink_saturated_fat" />
    <string name="raspberry_and_forest_berries_hot_drink_carbohidrates">39,9 g</string>
    <string name="raspberry_and_forest_berries_hot_drink_sugar">39,2</string>
    <string name="raspberry_and_forest_berries_hot_drink_fibre" />
    <string name="raspberry_and_forest_berries_hot_drink_proteins">0,2 g</string>
    <string name="raspberry_and_forest_berries_hot_drink_salt">0 g</string>
    <string name="raspberry_and_forest_berries_hot_drink_price">55,00 MDL</string>
    <string name="triangles_swiss_cheese_description">Swiss-style cheese triangles.</string>
    <string name="triangles_swiss_cheese_serving">70 g</string>
    <string name="triangles_swiss_cheese_energy">244 kcal</string>
    <string name="triangles_swiss_cheese_fat">16,14 g</string>
    <string name="triangles_swiss_cheese_saturated_fat">6,9 g</string>
    <string name="triangles_swiss_cheese_carbohidrates">14,58 g</string>
    <string name="triangles_swiss_cheese_sugar">0,58 g</string>
    <string name="triangles_swiss_cheese_fibre">0,89 g</string>
    <string name="triangles_swiss_cheese_proteins">9,8 g</string>
    <string name="triangles_swiss_cheese_salt">1,69 g</string>
    <string name="triangles_swiss_cheese_price">59,00 MDL</string>
    <string name="back_to_meals_and_mcdeals">← Back to Meals and McDeals</string>
    <string name="menu_big_mac">Menu Big Mac</string>
    <string name="twenty_chicken_mcnuggets_box">20 Chicken McNuggets Box</string>
    <string name="mccrispy_menu">McCrispy Menu</string>
    <string name="mcdeal_family">McDeal FAMILY</string>
    <string name="mcdeal_for_2">McDeal For 2</string>
    <string name="mcdeal_friends">McDeal Friends</string>
    <string name="menu_big_mac_bacon">Menu Big Mac Bacon</string>
    <string name="menu_big_tasty">Menu Big Tasty</string>
    <string name="bbq_sauce">BBQ Sauce</string>
    <string name="curry_sauce">Curry Sauce</string>
    <string name="garlic_sauce">Garlic Sauce</string>
    <string name="ketchup">Ketchup</string>
    <string name="mayonnaise">Mayonnaise</string>
    <string name="mustard">Mustard</string>
    <string name="sour_cream_sauce">Sour Cream Sauce</string>
    <string name="sweet_and_sour_sauce">Sweet and Sour Sauce</string>
    <string name="tabasco_hot_sauce">Tabasco - Hot Sauce</string>
</resources>