<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DishDetailActivity">

    <include
        android:id="@+id/header"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/speedee"
            android:padding="0dp"
            android:text="@string/back_to_menu"
            android:textColor="@color/dark_gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="411dp"
        android:layout_height="259dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <ImageView
            android:id="@+id/imageViewDishImage"
            android:layout_width="405dp"
            android:layout_height="140dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_apple_caramel_pie_foreground" />

        <TextView
            android:id="@+id/textViewDishTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/speedee"
            android:text="@string/apple_caramel_pie"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewDishImage" />

        <TextView
            android:id="@+id/textViewDishDescription"
            android:layout_width="359dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/speedee"
            android:text="@string/apple_caramel_pie_description"
            android:textColor="@color/dark_gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDishTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayoutContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/textViewServing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/speedee"
                android:text="@string/serving"
                android:textColor="@color/light_gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewServingData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/speedee"
                android:text="@string/apple_caramel_pie_serving"
                android:textAlignment="textEnd"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/textViewEnergy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/speedee"
                android:text="@string/energy"
                android:textColor="@color/light_gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewEnergyData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/speedee"
                android:text="@string/apple_caramel_pie_energy"
                android:textAlignment="textEnd"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/textViewFat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/speedee"
                android:text="@string/fat"
                android:textColor="@color/light_gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewFatData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/speedee"
                android:text="@string/apple_caramel_pie_fat"
                android:textAlignment="textEnd"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="6dp"
            android:id="@+id/linearLayoutSaturatedFat">

            <TextView
                android:id="@+id/textViewSaturatedFat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/speedee"
                android:text="@string/saturated_fat"
                android:textColor="@color/light_gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewSaturatedFatData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/speedee"
                android:text="@string/apple_caramel_pie_saturated_fat"
                android:textAlignment="textEnd"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/textViewCarbohidrates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/speedee"
                android:text="@string/carbohidrates"
                android:textColor="@color/light_gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewCarbohidratesData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/speedee"
                android:text="@string/apple_caramel_pie_carbohidrates"
                android:textAlignment="textEnd"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/textViewSugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/speedee"
                android:text="@string/sugar"
                android:textColor="@color/light_gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewSugarData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/speedee"
                android:text="@string/apple_caramel_pie_sugar"
                android:textAlignment="textEnd"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="6dp"
            android:id="@+id/linearLayoutFibre">

            <TextView
                android:id="@+id/textViewFibre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/speedee"
                android:text="@string/fibre"
                android:textColor="@color/light_gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewFibreData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/speedee"
                android:text="@string/apple_caramel_pie_fibre"
                android:textAlignment="textEnd"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/textViewProteins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/speedee"
                android:text="@string/proteins"
                android:textColor="@color/light_gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewProteinsData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/speedee"
                android:text="@string/apple_caramel_pie_proteins"
                android:textAlignment="textEnd"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSalt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/speedee"
                android:text="@string/salt"
                android:textColor="@color/light_gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewSaltData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/speedee"
                android:text="@string/apple_caramel_pie_salt"
                android:textAlignment="textEnd"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/viewPrice"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/speedee"
            android:text="@string/price"
            android:textColor="@color/light_gray"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textViewPriceData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/speedee"
            android:text="@string/apple_caramel_pie_price"
            android:textAlignment="textEnd"
            android:textSize="22sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>