<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaucesActivity">

    <include
        android:id="@+id/header"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/speedee"
            android:padding="0dp"
            android:text="@string/back_to_menu"
            android:textColor="@color/dark_gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonBBQSauce"
                    android:layout_width="205dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableTop="@mipmap/ic_bbq_sauce_foreground"
                    android:fontFamily="@font/speedee"
                    android:text="@string/bbq_sauce"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/buttonCurrySauce"
                    android:layout_width="205dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableTop="@mipmap/ic_curry_sauce_foreground"
                    android:fontFamily="@font/speedee"
                    android:text="@string/curry_sauce"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonGarlicSauce"
                    android:layout_width="205dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableTop="@mipmap/ic_garlic_sauce_foreground"
                    android:fontFamily="@font/speedee"
                    android:text="@string/garlic_sauce"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/buttonKetchup"
                    android:layout_width="205dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableTop="@mipmap/ic_ketchup_foreground"
                    android:fontFamily="@font/speedee"
                    android:text="@string/ketchup"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonMayonnaise"
                    android:layout_width="205dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableTop="@mipmap/ic_mayonnaise_foreground"
                    android:fontFamily="@font/speedee"
                    android:text="@string/mayonnaise"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/buttonMustard"
                    android:layout_width="205dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableTop="@mipmap/ic_mustard_foreground"
                    android:fontFamily="@font/speedee"
                    android:text="@string/mustard"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonSourCreamSauce"
                    android:layout_width="205dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableTop="@mipmap/ic_sour_cream_sauce_foreground"
                    android:fontFamily="@font/speedee"
                    android:text="@string/sour_cream_sauce"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/buttonSweetAndSourSauce"
                    android:layout_width="205dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableTop="@mipmap/ic_sweet_and_sour_sauce_foreground"
                    android:fontFamily="@font/speedee"
                    android:text="@string/sweet_and_sour_sauce"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonTabascoHotSauce"
                    android:layout_width="205dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableTop="@mipmap/ic_tabasco_hot_sauce_foreground"
                    android:fontFamily="@font/speedee"
                    android:text="@string/tabasco_hot_sauce"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </TableRow>

        </TableLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>